Crash when clicking "Solve Camera Motion" in Motion Tracking (2.81 nightly) #70452

Closed
opened 2019-10-02 17:02:37 +02:00 by Lars Soderlind · 5 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: 3b23685c7d
Worked: blender-2.81 3e81c1c1d5 from 2019-09-09

Short description of error
If I click "Solve Camera Motion" in Motion Tracking layout, blender will crash.
This seems to happen anytime there are too few tracks that will cause the error "At least 8 common tracks on both keyframes are needed for reconstruction" to be displayed.
If I have 8 or more tracks properly setup it will not crash.

Exact steps for others to reproduce the error
Open blender
Select Motion Tracking layout
Open any clip or image sequence
Go to the Solve tab and click "Solve Camera Motion" button
Blender crashes

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: `3b23685c7d` Worked: blender-2.81 3e81c1c1d5fd from 2019-09-09 **Short description of error** If I click "Solve Camera Motion" in Motion Tracking layout, blender will crash. This seems to happen anytime there are too few tracks that will cause the error "At least 8 common tracks on both keyframes are needed for reconstruction" to be displayed. If I have 8 or more tracks properly setup it will not crash. **Exact steps for others to reproduce the error** Open blender Select Motion Tracking layout Open any clip or image sequence Go to the Solve tab and click "Solve Camera Motion" button Blender crashes
Author

Added subscriber: @soderlind

Added subscriber: @soderlind

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Yep, I can confirm that.

Yep, I can confirm that.
Sergey Sharybin was assigned by Brecht Van Lommel 2019-10-02 18:45:04 +02:00

This issue was referenced by 78c0be9987

This issue was referenced by 78c0be99877b02a7cd568e868e512d4762a8256f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70452
No description provided.