Fix T70452: Crash when clicking "Solve Camera Motion" in Motion Tracking